# BR-Journal

./: .dockerignore  .gitignore  ADMIN_SYSTEM_README.md  DOCKER-SETUP.md  Dockerfile.dev  LICENSE  PRODUCT_KNOWLEDGE.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  STATUS_TRACKING_GUIDE.md  SUMMARY_REPORT_GUIDE.md  TOPMAN_SYSTEM_GUIDE.md  build.py  build.sh  create_admin.py  create_sample_data.py  docker-compose.yml  docker-setup.sh  manage.py  nixpacks.toml  package.json  pyproject.toml  railway-start.sh  railway.json  railway_setup.py  requirements.txt  setup-design.sh  setup.sh  setup_admin.py  vercel.json
apps/documents/: admin.py  models.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py  (+1 more)
apps/journal/: admin.py  forms.py  forms_topman.py  models.py  models_topman.py  tests.py  urls.py  views.py  views_summary.py  views_topman.py
apps/users/: admin.py  models.py  urls.py  views.py
apps/web/: admin_views.py  context_processors.py  urls.py  views.py
docuapp/: celery.py  settings.py  urls.py  wsgi.py
knowledge_base/: FEATURES.md  INSTALLATION.md  PRODUCT_KNOWLEDGE.md  README.md  TECHNICAL_DOCS.md  USER_GUIDE.md
public/: index.html
templates/: base.html
templates/documents/: create.html  history.html  list.html
templates/journal/: base.html  dashboard.html  journal_detail.html  journal_form.html  journal_list.html  summary_report.html  summary_report_print.html
templates/registration/: login.html
templates/users/: profile.html
templates/web/: dashboard.html  home.html  signin.html  signup.html
(+24 files in other folders)
